--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry kind="lib" path="/Users/justinmcmurdie/Documents/Development/javamail-1.4.7/mail.jar"/>
 	<classpathentry kind="lib" path="/Users/justinmcmurdie/Documents/Development/gson-2.2.2.jar"/>
 	<classpathentry kind="lib" path="gson-2.2.2.jar"/>
+	<classpathentry kind="lib" path="/Applications/Domo/Tomcat/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
