--- a/.classpath
+++ b/.classpath
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 6 (MacOS X Default)">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 6 (MacOS X Default)">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/MyStuff"/>
-	<classpathentry kind="lib" path="mysql-connector-java-5.1.23-bin.jar"/>
-	<classpathentry kind="lib" path="/Users/justinmcmurdie/Documents/Development/javamail-1.4.7/mail.jar"/>
-	<classpathentry kind="lib" path="/Users/justinmcmurdie/Documents/Development/gson-2.2.2.jar"/>
-	<classpathentry kind="lib" path="gson-2.2.2.jar"/>
-	<classpathentry kind="lib" path="/Applications/Domo/Tomcat/lib/servlet-api.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/MyStuff"/>
+	<classpathentry exported="true" kind="lib" path="mysql-connector-java-5.1.23-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Users/justinmcmurdie/Documents/Development/javamail-1.4.7/mail.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Users/justinmcmurdie/Documents/Development/gson-2.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="gson-2.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Applications/Domo/Tomcat/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
